show test name in delete dialog

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -190,7 +190,7 @@
                 </a>
               </td>
             <td>
-              <a href="javascript:ajax_delete('/app/{{app_id}}/test/{{id}}', '{{id}}');" title="Delete">
+              <a href="javascript:ajax_delete('/app/{{app_id}}/test/{{id}}', '{{name}}');" title="Delete">
                 <paper-icon-button class="compact" icon="delete"></paper-icon-button>
               </a>
             </td>
