fix hover text on /apps

--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -137,7 +137,7 @@
           <li>
             <a href="/app/{{id}}">
               <span class="graph-data">{{count failed}},{{count not_run}},{{count running}},{{count successful}}</span>
-              <img src="{{icon}}" title="{{count failed.values}} failed, {{count successful.values}} successful, {{count running.values}} running, {{count not_run.values}} not run">
+              <img src="{{icon}}" title="{{count failed}} failed, {{count successful}} successful, {{count running}} running, {{count not_run}} not run">
               <span class="details">
                 <h4>{{name}} <span class="version">{{version}}</span></h4>
                 <span class="info">{{identifier}}</span>
