prevent page refreshing if user selects a file to update app

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -229,6 +229,9 @@
   <script src="/js/s3_upload.js"></script>
   <script>
     s3_upload($('#app-update input[type=file]'), $('#app-update input[name=app_url]'), {
+      click: function() {
+        stop_auto_refresh();
+      },
       progress: function(progress) {
         $('#app-update .status').removeClass('error').text(progress).show();
       },
