--- a/server/html/admin.html
+++ b/server/html/admin.html
@@ -74,7 +74,7 @@
                 <ul>
                   {{#apps}}<li><a href="/app/{{.}}">{{.}}</a></li>{{/apps}}
                   <li>
-                    <form method="POST" action="/apps">
+                    <form method="POST" action="/api/v1/app">
                       <input type="hidden" name="as_user" value="{{id}}" />
                       <input type="submit" value="Add" />
                     </form>
