--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -28,8 +28,7 @@
 
       ul#apps .details {
         display: inline-block;
-        position: absolute;
-        left: 4.5em;
+        margin-left: 4.5em;
       }
 
       ul#apps img {
@@ -73,6 +72,10 @@
 
       h4 {
         margin-bottom: 1em;
+      }
+
+      #app-upload {
+        margin-top: 2em;
       }
 
       #app-upload .status {
@@ -130,14 +133,14 @@
       </paper-toolbar>
       {{/user}}
       <div class="content">
+        <div id="app-upload">
+          <p class="status"></p>
+          <input type="file" accept=".apk"/>
+          <form action="/api/v1/app" method="POST">
+            <input type="hidden" name="app_url" />
+          </form>
+        </div>
         <ul id="apps">
-          <li id="app-upload">
-            <p class="status"></p>
-            <input type="file" accept=".apk"/>
-            <form action="/api/v1/app" method="POST">
-              <input type="hidden" name="app_url" />
-            </form>
-          </li>
           {{#apps}}
           <li>
             <a href="/app/{{id}}">
