--- a/server/html/account.html
+++ b/server/html/account.html
@@ -69,7 +69,7 @@
           <h3>Access Token</h3>
           <ol>
             {{#access_tokens}}
-              <li><pre>{{token}}</pre></li>
+              <li><pre>{{.}}</pre></li>
             {{/access_tokens}}
           </ol>
         </div>
