minor: CSS tweak for app update instructions

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -85,6 +85,7 @@
       }
 
       #app-update > .info {
+        max-width: 30em;
         text-align: left;
         display: inline-block;
         background: #F5F5F5;
