only auto-refresh /apps/_ if test running

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -320,6 +320,8 @@
     }
   </script>
 
-  {{> auto-refresh}}
+  {{#app.running.values}}
+    {{> auto-refresh}}
+  {{/app.running.values}}
 
 </html>
