fix renaming tests

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -209,7 +209,7 @@
                 </a>
               </td>
               <td>
-                <a href="javascript:rename('/app/{{app_id}}/test/{{id}}', '{{name}}');" title="Rename">
+                <a href="javascript:rename('/app/{{app_id}}/test/{{id}}/edit', '{{name}}');" title="Rename">
                   <paper-icon-button class="compact" icon="create"></paper-icon-button>
                 </a>
               </td>
