minor: CSS tweaks to code snippet (/app/_)

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -90,10 +90,9 @@
         display: inline-block;
         background: #F5F5F5;
         padding: 1em 2em;
-        margin: 0 2em;
       }
 
-      #app-update code {
+      #app-update .info code {
         white-space: normal;
       }
 
