lower case app info text

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -223,7 +223,7 @@
                   </a>
                 </h3>
                 {{#latest_result}}
-                  <a class="last-run" href="/app/{{../app_id}}/test/{{../id}}/report/{{started_at}}">Ran {{date_relative started_at}}</a>
+                  <a class="last-run" href="/app/{{../app_id}}/test/{{../id}}/report/{{started_at}}">last run {{date_relative started_at}}</a>
                 {{/latest_result}}
               </div>
               <div class="actions">
