--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -149,7 +149,7 @@
               <img src="{{icon}}" title="{{count failed}} failed, {{count successful}} successful, {{count running}} running, {{count not_run}} not run">
               <span class="details" title="{{identifier}}">
                 <h4>{{name}} <span class="version">{{version}}</span></h4>
-                <span class="info">{{#updated_at}}Updated {{date_relative .}}{{/updated_at}}</span>
+                <span class="info">{{#updated_at}}updated {{date_relative .}}{{/updated_at}}</span>
               </span>
             </a>
           </li>
