improve login button UX

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -58,7 +58,7 @@
                         <a target="_blank" href="https://twitter.com/boop_js">@boop_js</a>
                     </li>
                     <li>
-                        <a class="login-button" href="/login">Sign in</a>
+                        <a class="login-button github" href="/login">Sign in with GitHub</a>
                     </li>
                 </ul>
             </div>
