added pricing page

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -52,7 +52,10 @@
                         <a href="#features">Features</a>
                     </li>
                     <li>
-                        <a href="/docs/BOOP.JS%20API%20reference%20v0.7.2.pdf" target="_blank">Documentation</a>
+                        <a href="/pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="/docs/BOOP.JS%20API%20reference%20v0.7.2.pdf" target="_blank">Docs</a>
                     </li>
                     <li>
                         <a target="_blank" href="https://twitter.com/boop_js">@boop_js</a>
@@ -195,6 +198,10 @@ tap('Sign in');
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#features">Features</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="/pricing">Pricing</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
