--- a/server/html/login.html
+++ b/server/html/login.html
@@ -51,6 +51,9 @@
   <body class="fullbleed">
     <paper-header-panel class="cyan">
       <paper-toolbar>
+        <a href="/" alt="Home">
+          <paper-icon-button icon="arrow-back"></paper-icon-button>
+        </a>
         <div class="title">boop.js</div>
       </paper-toolbar>
       <div class="content">
