fix documentation URL in footer on /, define URL in one place

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -55,7 +55,7 @@
                         <a href="/pricing">Pricing</a>
                     </li>
                     <li>
-                        <a href="/docs/BOOP.JS%20API%20reference%20v0.7.3.pdf" target="_blank">Docs</a>
+                        <a href="{{> documentation-url}}" target="_blank">Docs</a>
                     </li>
                     <li>
                         <a target="_blank" href="https://twitter.com/boop_js">@boop_js</a>
@@ -205,7 +205,7 @@ tap('Sign in');
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="/docs/Automation%20API%20reference%20v0.4.2.pdf" target="_blank">Documentation</a>
+                            <a href="{{> documentation-url}}" target="_blank">Documentation</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
