separate uploading via s3 and via URL

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -292,7 +292,7 @@
           </form>
           <h4>or</h4>
           <div class="info">
-            <code>curl -X PUT -H "Authorization: Bearer <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" {{host.protocol}}://{{host.address}}/api/v1/app/{{app.id}} -d "app_url=<span class="info url-to-app" title="Replace this with a URL to your app">$URL_TO_YOUR_APP</span>"</code>
+            <code>curl -X PUT -H "Authorization: Bearer <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" {{host.protocol}}://{{host.address}}/api/v1/app/{{app.id}} -d "url=<span class="info url-to-app" title="Replace this with a URL to your app">$URL_TO_YOUR_APP</span>"</code>
           </div>
         </div>
       </div>
