--- a/server/html/app.html
+++ b/server/html/app.html
@@ -318,46 +318,24 @@
 
   <script src="/js/s3_upload.js"></script>
   <script>
-    function handle_upload_error(error) {
-      $('#app-update .status').addClass('error').text(error).show();
-    }
-
-    function handle_upload_progress(progress) {
-      $('#app-update .status').removeClass('error').text(progress).show();
-    }
-
-    function update_processing_status() {
-      $.ajax({
-        url: '/api/v1/app/{{app.id}}/processing-status',
-        method: 'GET',
-        success: function(status) {
-          if (status.error) {
-            return handle_upload_error(error);
-          }
-          if (status.ready) {
-            location.reload();
-          } else {
-            handle_upload_progress(status.progress)
-            setTimeout(update_processing_status, 1000);
-          }
-        },
-        error: handle_upload_error
-      });
-    }
-
-    s3_upload($('#app-update input[type=file]'), $('#app-update input[name=app_url]'), {
+    var app_upload = s3_upload($('#app-update input[type=file]'), $('#app-update input[name=app_url]'), {
       click: function() {
-        stop_auto_refresh();
+        if (window.stop_auto_refresh) stop_auto_refresh();
       },
-      progress: handle_upload_progress,
-      success: update_processing_status,
-      error: handle_upload_error,
+      progress: function(msg) {
+        $('#app-update .status').removeClass('error').text(msg).show();
+      },
+      success: function() {
+        location.reload();
+      },
+      error: function(msg) {
+        $('#app-update .status').addClass('error').text(msg).show();
+      },
       google_analytics: ga
     });
 
     {{#app.processing_status}}
-    $('#app-update input[type=file]').hide();
-    update_processing_status();
+      app_upload.show_processing_status({ app: { id: '{{../app.id}}' }});
     {{/app.processing_status}}
   </script>
 
