--- a/server/html/app.html
+++ b/server/html/app.html
@@ -174,7 +174,7 @@
       }
       input[type=file]::before {
         color: #111;
-        content: 'Update app';
+        content: 'Upload app';
         display: inline-block;
         background: #f9f9f9;
         border: 1px solid #999;
@@ -292,7 +292,11 @@
           </form>
           <h4>or</h4>
           <div class="info">
-            <code>curl -X PUT -H "Authorization: Bearer <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" {{host.protocol}}://{{host.address}}/api/v1/app/{{app.id}} -d "url=<span class="info url-to-app" title="Replace this with a URL to your app">$URL_TO_YOUR_APP</span>"</code>
+            <code><a href="/scripts/boop.py" target="_blank">boop.py</a> --access-token <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" upload {{app.id}} <span class="info path-to-app" title="Replace this with the PATH to your APK">$PATH_TO_APK</span></code>
+          </div>
+          <h4>or</h4>
+          <div class="info">
+            <code>curl -X PUT -H "Authorization: Bearer <span class="info access-token" title="Your access token">{{access_tokens.[0]}}</span>" {{host.protocol}}://{{host.address}}/api/v1/app/{{app.id}} -d "url=<span class="info url-to-app" title="Replace this with a URL to your APK">$URL_TO_APK</span>"</code>
           </div>
         </div>
       </div>
