--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -76,7 +76,9 @@
       // Automatically start the test when the device starts
       window.addEventListener('message', function(event) {
         if (event.data === 'firstFrameReceived') {
-          eval( $('a.run').attr('href') );
+          setTimeout(function() {
+            eval( $('a.run').attr('href') );
+          }, 1000);
         }
       });
     </script>
