--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>boop.js - Android UI tests + continuous integration in minutes</title>
+
     <meta name="description" content="boop.js - Android UI test automation made simple, right in your web browser.">
     <meta name="author" content="Chetan Padia">
 
-    <title>boop.js - Android UI tests + continuous integration in minutes</title>
     <link rel="icon" href="/favicon.ico">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.purple-red.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/github-gist.min.css">
-    <script defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
+    {{> material-design-lite}}
+    
     <style>
-      .mdl-layout__drawer-button {
-        color: white;
-        text-shadow: 0 0 16px #000;
-      }
-
-      .mdl-layout__drawer .mdl-layout-title {
-        color: #39113e;
-      }
-
-      .mdl-layout-title img {
-        width: 1.25em;
-        margin-right: 0.5em;
-      }
-
       .mdl-cell.card-container {
         width: 330px;
       }
@@ -98,59 +79,11 @@
         margin: 1em 0;
         min-height: 0;
       }
-
-      footer * {
-        font-weight: 100;
-      }
-      footer .privacy {
-        margin-top: 1em;
-        font-size: 0.8em;
-      }
-      footer .privacy a.iubenda-embed {
-        text-decoration: underline;
-        color: inherit;
-      }
     </style>
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout">
-      <header class="mdl-layout__header mdl-layout__header--transparent mdl-layout__header--scroll">
-        <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">
-            <img src="/images/logo-white.svg"/>
-            boop.js
-          </span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-          <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="#features">Features</a>
-            <a class="mdl-navigation__link" href="/pricing">Pricing</a>
-            <a class="mdl-navigation__link" href="/docs" target="_blank">API Documentation</a>
-            <a href="/login">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
-                <i class="fa fa-github fa-lg"></i>
-                Sign in with GitHub
-              </button>
-            </a>
-          </nav>
-        </div>
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">
-          <img src="/images/logo.svg"/>
-          boop.js
-        </span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/login">
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
-              <i class="fa fa-github fa-lg"></i>
-              Sign in
-            </button>
-          </a>
-          <a class="mdl-navigation__link" href="/pricing">Pricing</a>
-          <a class="mdl-navigation__link" href="/docs" target="_blank">API Documentation</a>
-        </nav>
-      </div>
+      {{> nav-public}}
       <main class="mdl-layout__content">
         <div id="hero">
           <h1>Android UI tests + continuous integration<br>in minutes</h1>
@@ -261,26 +194,7 @@ assert_visible('finished');</code></pre>
           </p>
           <p>See a <a href="/sample-test-report"  target="_blank">sample test report</a> or run a <a href="/demo" target="_blank">demo</a>.</p>
         </div>
-        <footer class="mdl-mini-footer">
-          <div class="mdl-mini-footer__left-section">
-            <div class="mdl-logo">boop.js</div>
-            <ul class="mdl-mini-footer__link-list">
-              <li>
-                <a href="/pricing">Pricing</a>
-              </li>
-              <li>
-                <a href="/docs" target="_blank">API Documentation</a>
-              </li>
-              <li>
-                <a href="mailto:hello@boopjs.com" target="_blank">Contact us</a>
-              </li>
-            </ul>
-            <div class="privacy">
-              We're using cookies. Hope that's okay.
-              Here's our <a href="//www.iubenda.com/privacy-policy/7796980" class="iubenda-white iubenda-embed" title="Privacy Policy" target="_blank">Privacy Policy</a>.
-            </div>
-          </div>
-        </footer>
+        {{> footer-public}}
       </main>
     </div>
   </body>
