--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -9,23 +9,8 @@
     <link rel="icon" href="/favicon.ico">
 
     {{> material-design-lite}}
-    
+
     <style>
-      .mdl-cell.card-container {
-        width: 330px;
-      }
-
-      h1, h2, h3, h4 { font-weight: 100; }
-      h1 { font-size: 28px; }
-      h2 { font-size: 22px; }
-      h3 { font-size: 18px; }
-      h4 { font-size: 16px; }
-      pre { margin: 0; }
-
-      button > i {
-        margin-right: 0.5em;
-      }
-
       code a {
         color: inherit;
         text-decoration: inherit;
@@ -36,6 +21,10 @@
         background-image: url('/images/Nexus_5-bg.png');
         background-position: center center;
         color: rgba(255,255,255,0.87);
+      }
+
+      .mdl-layout__content {
+        background: none;
       }
 
       main > div.test-reports {
@@ -69,10 +58,15 @@
         text-align: left;
       }
 
+      footer {
+        margin: 0 !important;
+      }
+
       .feature {
         background: white;
         color: black;
         padding: 1em 4em;
+        margin: 0 !important;
       }
 
       .code-examples .mdl-card {
@@ -83,7 +77,7 @@
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout">
-      {{> nav-public}}
+      {{> nav-public transparent=true }}
       <main class="mdl-layout__content">
         <div id="hero">
           <h1>Android UI tests + continuous integration<br>in minutes</h1>
