--- a/server/html/pricing.html
+++ b/server/html/pricing.html
@@ -8,58 +8,51 @@
 
     <style>
       #tiers {
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 0;
-        max-width: 40em;
-        margin: 0 auto;
+        max-width: 800px;
       }
 
-      #tiers * {
+      #tiers, #tiers .mdl-cell, #tiers .mdl-card {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      #tiers .mdl-cell {
+        width: 380px;
+        margin-bottom: 2em;
+      }
+
+      #tiers .mdl-card {
+        width: 280px;
+      }
+
+      #tiers .mdl-card__title-text {
         color: rgba(255, 255, 255, 0.87);
       }
 
-      #tiers > li {
-        margin: 1em;
+      #tiers .mdl-card__title {
+        height: 92px;
+      }
+      #tiers .Free .mdl-card__title {
         background: #9E9E9E;
-        padding: 0 1em;
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 1em;
-        min-width: 12em;
-        text-align: center;
-        box-shadow: 0 1px 1px rgba(0,0,0,0.5);
       }
-      #tiers > li:nth-child(3) {
-        background: #E91E63;
+      #tiers .Indie .mdl-card__title {
+        background: #ED457E;
       }
-      #tiers > li:nth-child(2) {
+      #tiers .Team .mdl-card__title {
         background: #4CAF50;
       }
-      #tiers > li:nth-child(4) {
+      #tiers .Unlimited .mdl-card__title {
         background: #3F51B5;
       }
 
-      #tiers > li > * {
-        display: inline-flex;
-        flex-direction: column;
+      #tiers .mdl-card > * {
+        text-align: center;
       }
 
-      #tiers > li h3 {
-        text-transform: uppercase;
-      }
-
-      #tiers > li .price {
-        font-weight: 500;
+      #tiers .price {
+        font-size: 1.5em;
         margin-bottom: 1em;
-      }
-
-      #tiers > li .price i {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 1em;
+        display: inline-block;
       }
 
       .contact button {
@@ -74,32 +67,47 @@
       <main class="mdl-layout__content">
         <h2>Plans &amp; Pricing</h2>
         <p class="intro">boop.js is free to use for one app. Upgrade to one of our paid plans to test more apps and unlimited testing.</p>
-        <p>
-          <ol id="tiers">
-            {{#tiers}}
-              <li class="{{name}}">
-                <h3>{{name}}</h3>
-                {{#current}}
-                  <span class="price current">
-                    <i class="material-icons">check circle</i>
-                  </span>
-                {{else}}
-                  <a class="price" href="mailto:sales@boopjs.com?subject=Upgrade%20to%20{{name}}%20plan" target="_blank">
-                    {{monthly_cost}}
-                  </a>
-                {{/current}}
-                <span class="test-limit">
-                  {{#test_limit}}{{.}}{{else}}Unlimited{{/test_limit}}
-                  {{#if_eq 1 test_limit}}test{{else}}tests{{/if_eq}}
-                </span>
-                <span class="app-limit">
-                  {{#app_limit}}{{.}}{{else}}Unlimited{{/app_limit}}
-                  {{#if_eq 1 app_limit}}app{{else}}apps{{/if_eq}}
-                </span>
-              </li>
-            {{/tiers}}
-          </ol>
-        </p>
+        <div id="tiers" class="mdl-grid">
+          {{#tiers}}
+            <div class="mdl-cell mdl-cell--6-col {{name}}">
+              <div class="mdl-card mdl-shadow--4dp">
+                <div class="mdl-card__title">
+                  <h3 class="mdl-card__title-text">{{name}}</h3>
+                </div>
+                <div class="mdl-card__supporting-text">
+                  <p>
+                    <span class="price">{{monthly_cost}}</span>
+                    <br/>
+                    <span class="test-limit">
+                      {{#test_limit}}{{.}}{{else}}Unlimited{{/test_limit}}
+                      {{#if_eq 1 test_limit}}test{{else}}tests{{/if_eq}}
+                    </span>
+                    <br/>
+                    <span class="app-limit">
+                      {{#app_limit}}{{.}}{{else}}Unlimited{{/app_limit}}
+                      {{#if_eq 1 app_limit}}app{{else}}apps{{/if_eq}}
+                    </span>
+                    <br/>
+                    <span class="support">
+                      {{#support}}{{.}}{{else}}&nbsp;{{/support}}
+                    </span>
+                  </p>
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                  {{#current}}
+                    <a class="mdl-button mdl-js-button" style="color: #aaa;">
+                      Selected
+                    </a>
+                  {{else}}
+                    <a class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect" target="_blank" href="mailto:sales@boopjs.com?subject=Upgrade%20to%20{{name}}%20plan">
+                      Select
+                    </a>
+                  {{/current}}
+                </div>
+              </div>
+            </div>
+          {{/tiers}}
+        </div>
         {{> footer-public }}
       </main>
     </div>
