purple rebrand for Polymer pages

--- a/server/html/admin.html
+++ b/server/html/admin.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body class="fullbleed">
-    <paper-header-panel class="cyan">
+    <paper-header-panel>
       {{#user}}
       <paper-toolbar>
         <div class="title">Admin</div>
