--- a/server/html/app.html
+++ b/server/html/app.html
@@ -197,7 +197,7 @@
     </style>
   </head>
   <body class="fullbleed">
-    <paper-header-panel class="cyan">
+    <paper-header-panel class="boop-brand-color">
       {{#user}}
       <paper-toolbar>
         <a href="/apps" alt="Apps">
