--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -123,7 +123,7 @@
     </style>
   </head>
   <body class="fullbleed">
-    <paper-header-panel class="cyan">
+    <paper-header-panel class="boop-brand-color">
       {{#user}}
       <paper-toolbar>
         <div class="title">boop.js</div>
