--- a/server/html/login.html
+++ b/server/html/login.html
@@ -49,7 +49,7 @@
     </style>
   </head>
   <body class="fullbleed">
-    <paper-header-panel class="cyan">
+    <paper-header-panel class="boop-brand-color">
       <paper-toolbar>
         <a href="/" alt="Home">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
