--- a/server/html/report.html
+++ b/server/html/report.html
@@ -132,7 +132,7 @@
     </style>
   </head>
   <body class="fullbleed {{#result.success}}successful{{/result.success}} {{#result.error}}failed{{/result.error}} {{#unless result.success}}{{#unless result.error}}running{{/unless}}{{/unless}}">
-    <paper-header-panel class="cyan" mode="waterfall-tall">
+    <paper-header-panel class="boop-brand-color" mode="waterfall-tall">
       <div class="paper-header">
         <div class="right">
           {{> feedback-button}}
