--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -41,7 +41,7 @@
     <script src="/components/jquery/dist/jquery.min.js"></script>
   </head>
   <body class="fullbleed {{#user}}logged-in{{/user}}">
-    <paper-header-panel class="cyan">
+    <paper-header-panel class="boop-brand-color">
       {{#user}}
       <paper-toolbar>
         <a href="/app/{{../code.app_id}}" alt="Apps">
