--- a/server/html/reports.html
+++ b/server/html/reports.html
@@ -78,7 +78,7 @@
     </style>
   </head>
   <body class="fullbleed">
-    <paper-header-panel class="cyan">
+    <paper-header-panel class="boop-brand-color">
       {{#user}}
       <paper-toolbar>
         <a href="/app/{{../app.id}}" alt="{{../app.name}}">
