add Google Analytics to new landing page

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -194,4 +194,7 @@ assert_visible('finished');</code></pre>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
   <script>hljs.initHighlighting();</script>
+
+  {{> google-analytics}}
+
 </html>
