--- a/server/html/app.html
+++ b/server/html/app.html
@@ -59,7 +59,11 @@
         max-width: 13em;
         overflow: hidden;
         text-overflow: ellipsis;
-        margin-right: 0.5em;
+        margin-right: 0.25em;
+      }
+
+      #code .app-info .name > *:nth-child(2) {
+        margin-right: 1em;
       }
 
       #code .app-info .name > a > paper-icon-button,
@@ -203,6 +207,8 @@
         background: #eee;
       }
     </style>
+
+    <link rel="stylesheet" type="text/css" href="/components/jquery-ui/themes/base/jquery-ui.min.css" />
   </head>
   <body class="fullbleed">
     <paper-header-panel class="boop-brand-color">
@@ -250,19 +256,19 @@
                 </span>
                 <h3 class="name">
                     <span class="text">{{name}}</span>
-                    {{#os_version}}
-                      <a>
-                        <iron-icon icon="android" title="Android version: {{.}}"></iron-icon>
-                      </a>
-                    {{/os_version}}
-                    {{#location}}
-                      <a href="https://www.google.co.uk/maps/search/{{lat}},{{lon}}" target="_blank">
-                        <iron-icon icon="communication:location-on" title="Location: {{lat}}, {{lon}}"></iron-icon>
-                      </a>
-                    {{/location}}
                     <a href="javascript:rename('/app/{{app_id}}/test/{{id}}/edit', '{{name}}');" title="Rename test">
                       <paper-icon-button icon="create"></paper-icon-button>
                     </a>
+                    {{#os_version}}
+                      <a title="Android version: {{.}}">
+                        <iron-icon icon="android"></iron-icon>
+                      </a>
+                    {{/os_version}}
+                    {{#location}}
+                      <a data-geo="{{lat}},{{lon}}">
+                        <iron-icon icon="communication:location-on"></iron-icon>
+                      </a>
+                    {{/location}}
                   </a>
                 </h3>
                 {{#latest_result}}
@@ -335,6 +341,22 @@
   <script>
     $('paper-button').click(function() {
       $(this).addClass('pending');
+    });
+  </script>
+
+  <script src="/components/jquery-ui/jquery-ui.min.js"></script>
+  <script>
+    $(document).tooltip({
+      items: 'a:not([href]), [data-geo]',
+      content: function() {
+        var latlon = $(this).data('geo');
+        if (latlon) {
+          var url = 'http://maps.googleapis.com/maps/api/staticmap?center=' + latlon + '&amp;zoom=8&amp;scale=false&amp;size=300x150&amp;maptype=roadmap&amp;markers=size:small%7Ccolor:0x4e265a%7C' + latlon;
+          return '<img src="' + url + '" />';
+        } else {
+          return $(this).attr('title');
+        }
+      }
     });
   </script>
 
