hack to fix spinner thanks to updated paper-spinner

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -97,7 +97,7 @@
       }
 
       paper-button paper-spinner {
-        display: none;
+        display: none !important;
         position: relative;
         float: left;
         top: -4px;
@@ -106,7 +106,7 @@
       }
 
       paper-button.pending paper-spinner {
-        display: inline-block;
+        display: inline-block !important;
       }
       paper-button.pending iron-icon {
         display: none;
