remove crappy "?" from tests that have not been run

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -251,7 +251,7 @@
                     </a>
                   {{/latest_result}}
                   {{#unless latest_result}}
-                  <a title="Not run">?</a>
+                    <!-- not run -->
                   {{/unless}}
                 </span>
                 <h3 class="name">
